ftcParser/antlr/FusionTablesSqlParser.java
// Generated from FusionTablesSql.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FusionTablesSqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, K_ALTER=5, K_AND=6, K_OR=7, K_AS=8, K_ASC=9, 
		K_AVERAGE=10, K_BY=11, K_BETWEEN=12, K_CASE=13, K_CIRCLE=14, K_COLUMN=15, 
		K_CONTAINS=16, K_COUNT=17, K_CREATE=18, K_DELETE=19, K_DESC=20, K_DESCRIBE=21, 
		K_DOES=22, K_CONTAIN=23, K_DROP=24, K_ENDS=25, K_FROM=26, K_GROUP=27, 
		K_HAVING=28, K_IGNORING=29, K_IN=30, K_INSERT=31, K_INTO=32, K_JOIN=33, 
		K_LATLNG=34, K_LEFT=35, K_LIKE=36, K_LIMIT=37, K_MATCHES=38, K_MAXIMUM=39, 
		K_MINIMUM=40, K_NOT=41, K_EQUAL=42, K_OF=43, K_OFFSET=44, K_ON=45, K_ORDER=46, 
		K_OUTER=47, K_RECTANGLE=48, K_RENAME=49, K_ST_DISTANCE=50, K_SELECT=51, 
		K_ST_INTERSECTS=52, K_SUM=53, K_SET=54, K_SHOW=55, K_STARTS=56, K_TABLE=57, 
		K_TABLES=58, K_TO=59, K_UPDATE=60, K_VALUES=61, K_VIEW=62, K_WHERE=63, 
		K_WITH=64, LT_EQ=65, GT_EQ=66, GT=67, EQ=68, LT=69, LPAR=70, RPAR=71, 
		NUMERIC_LITERAL=72, STRING_LITERAL=73, STRING=74, QUOTED_STRING=75, SINGLELINE_COMMENT=76, 
		MULTILINE_COMMENT=77, WHITESPACE=78;
	public static final int
		RULE_fusionTablesSql = 0, RULE_sql_stmt = 1, RULE_table_name_in_ddl = 2, 
		RULE_table_name_in_dml = 3, RULE_create_table_as_select_stmt = 4, RULE_describe_stmt = 5, 
		RULE_show_tables_stmt = 6, RULE_alter_table_stmt = 7, RULE_create_view_stmt = 8, 
		RULE_drop_table_stmt = 9, RULE_insert_stmt = 10, RULE_update_stmt = 11, 
		RULE_column_assignment = 12, RULE_delete_stmt = 13, RULE_eq_comparison = 14, 
		RULE_table_name_with_alias = 15, RULE_select_stmt = 16, RULE_ordering_term = 17, 
		RULE_join_clause = 18, RULE_result_column = 19, RULE_qualified_column_name = 20, 
		RULE_aggregate_exp = 21, RULE_expr = 22, RULE_column_name_beginning_expr = 23, 
		RULE_column_name_in_dml = 24, RULE_and_or_or = 25, RULE_geometry = 26, 
		RULE_circle = 27, RULE_rectangle = 28, RULE_coordinate = 29, RULE_keyword = 30, 
		RULE_operator = 31, RULE_literal = 32, RULE_error_message = 33, RULE_identifier = 34, 
		RULE_column_alias = 35, RULE_table_name = 36, RULE_column_name = 37, RULE_new_table_name = 38, 
		RULE_view_name = 39, RULE_table_alias = 40, RULE_numeric_literal = 41, 
		RULE_string_literal = 42;
	public static final String[] ruleNames = {
		"fusionTablesSql", "sql_stmt", "table_name_in_ddl", "table_name_in_dml", 
		"create_table_as_select_stmt", "describe_stmt", "show_tables_stmt", "alter_table_stmt", 
		"create_view_stmt", "drop_table_stmt", "insert_stmt", "update_stmt", "column_assignment", 
		"delete_stmt", "eq_comparison", "table_name_with_alias", "select_stmt", 
		"ordering_term", "join_clause", "result_column", "qualified_column_name", 
		"aggregate_exp", "expr", "column_name_beginning_expr", "column_name_in_dml", 
		"and_or_or", "geometry", "circle", "rectangle", "coordinate", "keyword", 
		"operator", "literal", "error_message", "identifier", "column_alias", 
		"table_name", "column_name", "new_table_name", "view_name", "table_alias", 
		"numeric_literal", "string_literal"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'*'", "','", "'.'", null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "'<='", "'>='", "'>'", "'='", "'<'", 
		"'('", "')'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, "K_ALTER", "K_AND", "K_OR", "K_AS", "K_ASC", 
		"K_AVERAGE", "K_BY", "K_BETWEEN", "K_CASE", "K_CIRCLE", "K_COLUMN", "K_CONTAINS", 
		"K_COUNT", "K_CREATE", "K_DELETE", "K_DESC", "K_DESCRIBE", "K_DOES", "K_CONTAIN", 
		"K_DROP", "K_ENDS", "K_FROM", "K_GROUP", "K_HAVING", "K_IGNORING", "K_IN", 
		"K_INSERT", "K_INTO", "K_JOIN", "K_LATLNG", "K_LEFT", "K_LIKE", "K_LIMIT", 
		"K_MATCHES", "K_MAXIMUM", "K_MINIMUM", "K_NOT", "K_EQUAL", "K_OF", "K_OFFSET", 
		"K_ON", "K_ORDER", "K_OUTER", "K_RECTANGLE", "K_RENAME", "K_ST_DISTANCE", 
		"K_SELECT", "K_ST_INTERSECTS", "K_SUM", "K_SET", "K_SHOW", "K_STARTS", 
		"K_TABLE", "K_TABLES", "K_TO", "K_UPDATE", "K_VALUES", "K_VIEW", "K_WHERE", 
		"K_WITH", "LT_EQ", "GT_EQ", "GT", "EQ", "LT", "LPAR", "RPAR", "NUMERIC_LITERAL", 
		"STRING_LITERAL", "STRING", "QUOTED_STRING", "SINGLELINE_COMMENT", "MULTILINE_COMMENT", 
		"WHITESPACE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FusionTablesSql.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FusionTablesSqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FusionTablesSqlContext extends ParserRuleContext {
		public List<Sql_stmtContext> sql_stmt() {
			return getRuleContexts(Sql_stmtContext.class);
		}
		public Sql_stmtContext sql_stmt(int i) {
			return getRuleContext(Sql_stmtContext.class,i);
		}
		public FusionTablesSqlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fusionTablesSql; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).enterFusionTablesSql(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).exitFusionTablesSql(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FusionTablesSqlVisitor ) return ((FusionTablesSqlVisitor<? extends T>)visitor).visitFusionTablesSql(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FusionTablesSqlContext fusionTablesSql() throws RecognitionException {
		FusionTablesSqlContext _localctx = new FusionTablesSqlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_fusionTablesSql);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << K_ALTER) | (1L << K_CREATE) | (1L << K_DELETE) | (1L << K_DESCRIBE) | (1L << K_DROP) | (1L << K_INSERT) | (1L << K_SELECT) | (1L << K_SHOW) | (1L << K_UPDATE))) != 0)) {
				{
				{
				setState(86);
				sql_stmt();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sql_stmtContext extends ParserRuleContext {
		public Alter_table_stmtContext alter_table_stmt() {
			return getRuleContext(Alter_table_stmtContext.class,0);
		}
		public Select_stmtContext select_stmt() {
			return getRuleContext(Select_stmtContext.class,0);
		}
		public Create_view_stmtContext create_view_stmt() {
			return getRuleContext(Create_view_stmtContext.class,0);
		}
		public Create_table_as_select_stmtContext create_table_as_select_stmt() {
			return getRuleContext(Create_table_as_select_stmtContext.class,0);
		}
		public Delete_stmtContext delete_stmt() {
			return getRuleContext(Delete_stmtContext.class,0);
		}
		public Drop_table_stmtContext drop_table_stmt() {
			return getRuleContext(Drop_table_stmtContext.class,0);
		}
		public Insert_stmtContext insert_stmt() {
			return getRuleContext(Insert_stmtContext.class,0);
		}
		public Update_stmtContext update_stmt() {
			return getRuleContext(Update_stmtContext.class,0);
		}
		public Describe_stmtContext describe_stmt() {
			return getRuleContext(Describe_stmtContext.class,0);
		}
		public Show_tables_stmtContext show_tables_stmt() {
			return getRuleContext(Show_tables_stmtContext.class,0);
		}
		public Sql_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).enterSql_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).exitSql_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FusionTablesSqlVisitor ) return ((FusionTablesSqlVisitor<? extends T>)visitor).visitSql_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sql_stmtContext sql_stmt() throws RecognitionException {
		Sql_stmtContext _localctx = new Sql_stmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sql_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(92);
				alter_table_stmt();
				}
				break;
			case 2:
				{
				setState(93);
				select_stmt();
				}
				break;
			case 3:
				{
				setState(94);
				create_view_stmt();
				}
				break;
			case 4:
				{
				setState(95);
				create_table_as_select_stmt();
				}
				break;
			case 5:
				{
				setState(96);
				delete_stmt();
				}
				break;
			case 6:
				{
				setState(97);
				drop_table_stmt();
				}
				break;
			case 7:
				{
				setState(98);
				insert_stmt();
				}
				break;
			case 8:
				{
				setState(99);
				update_stmt();
				}
				break;
			case 9:
				{
				setState(100);
				describe_stmt();
				}
				break;
			case 10:
				{
				setState(101);
				show_tables_stmt();
				}
				break;
			}
			setState(104);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Table_name_in_ddlContext extends ParserRuleContext {
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public Table_name_in_ddlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table_name_in_ddl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).enterTable_name_in_ddl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).exitTable_name_in_ddl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FusionTablesSqlVisitor ) return ((FusionTablesSqlVisitor<? extends T>)visitor).visitTable_name_in_ddl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Table_name_in_ddlContext table_name_in_ddl() throws RecognitionException {
		Table_name_in_ddlContext _localctx = new Table_name_in_ddlContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_table_name_in_ddl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			table_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Table_name_in_dmlContext extends ParserRuleContext {
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public Table_name_in_dmlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table_name_in_dml; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).enterTable_name_in_dml(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).exitTable_name_in_dml(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FusionTablesSqlVisitor ) return ((FusionTablesSqlVisitor<? extends T>)visitor).visitTable_name_in_dml(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Table_name_in_dmlContext table_name_in_dml() throws RecognitionException {
		Table_name_in_dmlContext _localctx = new Table_name_in_dmlContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_table_name_in_dml);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			table_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Create_table_as_select_stmtContext extends ParserRuleContext {
		public TerminalNode K_CREATE() { return getToken(FusionTablesSqlParser.K_CREATE, 0); }
		public TerminalNode K_TABLE() { return getToken(FusionTablesSqlParser.K_TABLE, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode K_AS() { return getToken(FusionTablesSqlParser.K_AS, 0); }
		public TerminalNode K_SELECT() { return getToken(FusionTablesSqlParser.K_SELECT, 0); }
		public TerminalNode K_FROM() { return getToken(FusionTablesSqlParser.K_FROM, 0); }
		public Table_name_in_ddlContext table_name_in_ddl() {
			return getRuleContext(Table_name_in_ddlContext.class,0);
		}
		public Create_table_as_select_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_table_as_select_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).enterCreate_table_as_select_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).exitCreate_table_as_select_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FusionTablesSqlVisitor ) return ((FusionTablesSqlVisitor<? extends T>)visitor).visitCreate_table_as_select_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Create_table_as_select_stmtContext create_table_as_select_stmt() throws RecognitionException {
		Create_table_as_select_stmtContext _localctx = new Create_table_as_select_stmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_create_table_as_select_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(K_CREATE);
			setState(111);
			match(K_TABLE);
			setState(112);
			identifier();
			setState(113);
			match(K_AS);
			setState(114);
			match(K_SELECT);
			setState(115);
			match(T__1);
			setState(116);
			match(K_FROM);
			setState(117);
			table_name_in_ddl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Describe_stmtContext extends ParserRuleContext {
		public TerminalNode K_DESCRIBE() { return getToken(FusionTablesSqlParser.K_DESCRIBE, 0); }
		public Table_name_in_ddlContext table_name_in_ddl() {
			return getRuleContext(Table_name_in_ddlContext.class,0);
		}
		public Describe_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_describe_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).enterDescribe_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).exitDescribe_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FusionTablesSqlVisitor ) return ((FusionTablesSqlVisitor<? extends T>)visitor).visitDescribe_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Describe_stmtContext describe_stmt() throws RecognitionException {
		Describe_stmtContext _localctx = new Describe_stmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_describe_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(K_DESCRIBE);
			setState(120);
			table_name_in_ddl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Show_tables_stmtContext extends ParserRuleContext {
		public TerminalNode K_SHOW() { return getToken(FusionTablesSqlParser.K_SHOW, 0); }
		public TerminalNode K_TABLES() { return getToken(FusionTablesSqlParser.K_TABLES, 0); }
		public Show_tables_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_show_tables_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).enterShow_tables_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).exitShow_tables_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FusionTablesSqlVisitor ) return ((FusionTablesSqlVisitor<? extends T>)visitor).visitShow_tables_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Show_tables_stmtContext show_tables_stmt() throws RecognitionException {
		Show_tables_stmtContext _localctx = new Show_tables_stmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_show_tables_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(K_SHOW);
			setState(123);
			match(K_TABLES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Alter_table_stmtContext extends ParserRuleContext {
		public TerminalNode K_ALTER() { return getToken(FusionTablesSqlParser.K_ALTER, 0); }
		public TerminalNode K_TABLE() { return getToken(FusionTablesSqlParser.K_TABLE, 0); }
		public Table_name_in_ddlContext table_name_in_ddl() {
			return getRuleContext(Table_name_in_ddlContext.class,0);
		}
		public TerminalNode K_RENAME() { return getToken(FusionTablesSqlParser.K_RENAME, 0); }
		public TerminalNode K_TO() { return getToken(FusionTablesSqlParser.K_TO, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Alter_table_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alter_table_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).enterAlter_table_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).exitAlter_table_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FusionTablesSqlVisitor ) return ((FusionTablesSqlVisitor<? extends T>)visitor).visitAlter_table_stmt(this);
			else return visitor.visitChildren(this);
		}
	}
